# hive-cli

./: .gitignore  CHANGELOG.md  README.md  app.py  dev.py  pyproject.toml  release.py  setup.sh
concepts/: overview.drawio
hive_cli/: __init__.py  config.py  controller.py  data.py  docker.py  frontend.py  gh.py  infopage.py  repo.py  server.py  ssl.py  styling.py
tests/: test_meta.py
