[project]
name = "hive-cli"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.1",
    "docker>=7.1.0",
    "fastapi>=0.114.0",
    "gitpython>=3.1.43",
    "humanize>=4.11.0",
    "nicegui>=2.7.0",
    "poethepoet>=0.31.1",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.4",
]

[dependency-groups]
dev = ["pytest>=8.3.3", "ruff>=0.6.4"]

[tool.poe.tasks]
prod.script = "hive_cli.server:prod()"
dev = "uv run dev.py"

# Without build system declaration the package cannot be imported
# https://github.com/astral-sh/uv/issues/9291
# https://github.com/astral-sh/uv/issues/1626
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
